Now using a contenteditable div for typing in tasks, task container resizing and such is working perfectly, and implemented the checking and unchecking buttons when adding tasks

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <div>F</div>
                     <div>S</div>
                 </div>
-                <div class="date-section">
+                <div class="date-section" id="date-container">
                     <div class="week week1">
                         <div class="day day1">
                             <div class="day-text"></div>
@@ -214,7 +214,7 @@
             </div>
             <div class="todo-section">
                 <div class="day-title">Monday, March 24th</div>
-                <div class="add-task-button">
+                <div class="add-task-button" onclick="addTask()">
                     <div class="add-task-icon">+</div>
                     <div class="add-task-text">Add Task</div>
                 </div>
@@ -222,8 +222,8 @@
                     <div class="gradient"></div>
                 </div>
                 
-                <div class="task-section">
-                    <div class="task">
+                <div class="task-section" id="task-container">
+                    <!-- <div class="task">
                         <div class="task-icon"></div>
                         <div class="task-content">Example Task Example Task Example Task Example Task</div>
                         <div class="task-delete-icon"></div>
@@ -267,9 +267,9 @@
                         <div class="task-icon"></div>
                         <div class="task-content">Example Task Example Task Example Task Example Task</div>
                         <div class="task-delete-icon"></div>
-                    </div>
+                    </div> -->
                     
-                </div>
+                </div> 
                 <div class="bottom-gradient-positioner">
                     <div class="bottom-gradient"></div>
                 </div>
