--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="calendar-section">
                 <div class="month-header">
                     <div class="month-button previous-month-button">X</div>
-                    <div class="month-title">March 2024</div>
+                    <div class="month-title" id="month-title">March 2024</div>
                     <div class="month-button next-month-button">X</div>
                 </div>
                 <div class="month-week-divider"></div>
