--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="app-container">
             <div class="calendar-section">
                 <div class="month-header">
-                    <div class="month-button previous-month-button">X</div>
+                    <div class="month-button previous-month-button" id="previous-month-button">X</div>
                     <div class="month-title" id="month-title">March 2024</div>
-                    <div class="month-button next-month-button">X</div>
+                    <div class="month-button next-month-button" id="next-month-button">X</div>
                 </div>
                 <div class="month-week-divider"></div>
                 <div class="week-header">
