made every aspect of the visuals responsive with media queries, fine-tuning and gutter sizes

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <div class="everything-container">
+<body id="body">
+    <div class="everything-container" id="everything-container">
         <div class="app-container">
             <div class="calendar-section">
                 <div class="month-header">
@@ -223,58 +223,17 @@
                 </div>
                 
                 <div class="task-section" id="task-container">
-                    <!-- <div class="task">
-                        <div class="task-icon"></div>
-                        <div class="task-content">Example Task Example Task Example Task Example Task</div>
-                        <div class="task-delete-icon"></div>
-                    </div>
-                    <div class="task">
-                        <div class="task-icon"></div>
-                        <div class="task-content">Example Task Example Task Example Task Example Task</div>
-                        <div class="task-delete-icon"></div>
-                    </div>
-                    <div class="task">
-                        <div class="task-icon"></div>
-                        <div class="task-content">Example Task Example Task Example Task Example Task</div>
-                        <div class="task-delete-icon"></div>
-                    </div>
-                    <div class="task">
-                        <div class="task-icon"></div>
-                        <div class="task-content">Example Task Example Task Example Task Example Task</div>
-                        <div class="task-delete-icon"></div>
-                    </div>
-                    <div class="task">
-                        <div class="task-icon"></div>
-                        <div class="task-content">Example Task Example Task Example Task Example Task</div>
-                        <div class="task-delete-icon"></div>
-                    </div>
-                    <div class="task">
-                        <div class="task-icon"></div>
-                        <div class="task-content">Example Task Example Task Example Task Example Task</div>
-                        <div class="task-delete-icon"></div>
-                    </div>
-                    <div class="task">
-                        <div class="task-icon"></div>
-                        <div class="task-content">Example Task Example Task Example Task Example Task</div>
-                        <div class="task-delete-icon"></div>
-                    </div>
-                    <div class="task">
-                        <div class="task-icon"></div>
-                        <div class="task-content">Example Task Example Task Example Task Example Task</div>
-                        <div class="task-delete-icon"></div>
-                    </div>
-                    <div class="task">
-                        <div class="task-icon"></div>
-                        <div class="task-content">Example Task Example Task Example Task Example Task</div>
-                        <div class="task-delete-icon"></div>
-                    </div> -->
-                    
                 </div> 
                 <div class="bottom-gradient-positioner">
                     <div class="bottom-gradient"></div>
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="universal-blur-popup hidden-popup"></div>
+    <div class="month-popup hidden-popup">
+        HELLO
     </div>
 
     <script src="script.js"></script>
