Added a fully functioning, responsive month and year selector popup. Also fixed a major bug with incorrectly saving when in updateGrid()'s recursive selectDate() call, which has an already-updated globalSelectedDatetime but would try to save again.

--- a/index.html
+++ b/index.html
@@ -228,13 +228,64 @@
                     <div class="bottom-gradient"></div>
                 </div>
             </div>
+            <div class="month-selection-popup hidden-popup" id="month-selector-popup">
+                <div class="year-header">
+                    <div class="previous-year-button year-button" id="previous-year-button">X</div>
+                    <div class="year-title" id="year-title">2024</div>
+                    <div class="next-year-button year-button" id="next-year-button">X</div>
+                </div>
+                <div class="month-selection-divider"></div>
+                <div class="month-selection-container" id="month-cell-container">
+                    <div class="month-row month-row1">
+                        <div class="month-cell month-cell1">
+                            <div class="month-cell-text">JAN</div>
+                        </div>
+                        <div class="month-cell month-cell2">
+                            <div class="month-cell-text">FEB</div>
+                        </div>
+                        <div class="month-cell month-cell3">
+                            <div class="month-cell-text">MAR</div>
+                        </div>
+                    </div>
+                    <div class="month-row month-row2">
+                        <div class="month-cell month-cell1">
+                            <div class="month-cell-text">APR</div>
+                        </div>
+                        <div class="month-cell month-cell2">
+                            <div class="month-cell-text">MAY</div>
+                        </div>
+                        <div class="month-cell month-cell3">
+                            <div class="month-cell-text">JUNE</div>
+                        </div>
+                    </div>
+                    <div class="month-row month-row3">
+                        <div class="month-cell month-cell1">
+                            <div class="month-cell-text">JUL</div>
+                        </div>
+                        <div class="month-cell month-cell2">
+                            <div class="month-cell-text">AUG</div>
+                        </div>
+                        <div class="month-cell month-cell3">
+                            <div class="month-cell-text">SEP</div>
+                        </div>
+                    </div>
+                    <div class="month-row month-row4">
+                        <div class="month-cell month-cell1">
+                            <div class="month-cell-text">OCT</div>
+                        </div>
+                        <div class="month-cell month-cell2">
+                            <div class="month-cell-text">NOV</div>
+                        </div>
+                        <div class="month-cell month-cell3">
+                            <div class="month-cell-text">DEC</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
-    <div class="universal-blur-popup hidden-popup"></div>
-    <div class="month-popup hidden-popup">
-        HELLO
-    </div>
+    <div class="universal-blur-popup hidden-popup" id="blur-popup"></div>
 
     <script src="script.js"></script>
 </body>
